# platformer_games_project

./: .gitignore  README.md  TODO.md  pygame_projects.pyproj  pygame_projects.sln  requirements.txt  setup.py
combat_platformer/: CMakeLists.txt  package.xml
combat_platformer/src/combat_platformer/attack/: __init__.py  action_keys.py  attack.py  attack_state.py
combat_platformer/src/combat_platformer/enemy/: __init__.py  basic_states.py  enemy_base.py  enemy_properties.py  enemy_state_machine.py
combat_platformer/src/combat_platformer/input/: __init__.py  input_manager.py  joystick_buttons.py  joystick_manager.py  joystick_state.py  move.py
combat_platformer/src/combat_platformer/level/: __init__.py  action_keys.py  level_base.py  platform.py
combat_platformer/src/combat_platformer/player/: __init__.py  action_keys.py  attack_states.py  basic_states.py  player_base.py  player_properties.py  player_state_machine.py
combat_platformer/src/games/: basic_platformer.py
combat_platformer/src/tests/: test_attack_object.py  test_joystick_manager.py
deprecated/combat_platformer/: CMakeLists.txt
deprecated/combat_platformer/src/games/: basic_platformer.py
deprecated/combat_platformer/src/tests/: test_attack_object.py  test_joystick.py  test_joystick_manager.py
deprecated/game_asset_management/: CMakeLists.txt  package.xml
deprecated/game_asset_management/src/: test_asset_collection.xml
deprecated/game_asset_management/src/tests/: test_tkpygame.py
deprecated/simple_platformer/: CMakeLists.txt  package.xml  setup.py
deprecated/simple_platformer/src/: sys
deprecated/simple_platformer/src/deprecated/: action_rules.py  animated_platform_scroller.py  animated_player.py  level.py  platform_scroller.py
deprecated/simple_platformer/src/examples/: game_platformer.py  test_state_machine.py
panda3d_examples/: CMakeLists.txt  package.xml  test_kinematic_object.py  test_sprite_animation.py
panda3d_examples/src/: test_kinematic_object.py  test_level_sector.py  test_sprite_animation.py  test_standalone_physics.py
physics_platformer/: CMakeLists.txt  TODO.md  package.xml  setup.py
physics_platformer/demos/: demo_basic_game.py  demo_simple_level.py
physics_platformer/resources/MugenTemplatePlayer/: player.air  player.sff  readme.txt
physics_platformer/resources/Neji/: 1.act  4.act  5.act  IA.cns  Neji.cns  Neji.def  Neji.sff  Thumbs.db
physics_platformer/resources/models/cube/: cube.blend
physics_platformer/src/physics_platformer/animation/: __init__.py  animation_action.py  animation_actor.py  animation_info.py
physics_platformer/src/physics_platformer/camera/: __init__.py  camera_controller.py
physics_platformer/src/physics_platformer/character/: __init__.py  character.py  character_base.py  character_info.py  character_state_data.py  character_state_machine.py  character_states.py  character_status.py  motion_commander.py
physics_platformer/src/physics_platformer/collision/: __init__.py  collision_action.py  collision_action_matrix.py  collision_masks.py  collision_resolver.py  game_action_keys.py
physics_platformer/src/physics_platformer/collision_masks/: __init__.py  collision_masks.py
physics_platformer/src/physics_platformer/game_actions/: __init__.py  animation_actions.py  character_actions.py  collision_action.py  collision_action_matrix.py  general_actions.py
physics_platformer/src/physics_platformer/game_level/: __init__.py  ledge.py  level.py  level_collision_resolver.py  level_sector_resolver.py  platform.py  sector.py  simple_platform.py
physics_platformer/src/physics_platformer/game_object/: __init__.py  animatable_object.py  character_base.py  character_info.py  character_object.py  game_object.py
physics_platformer/src/physics_platformer/geometry2d/: __init__.py  box.py
physics_platformer/src/physics_platformer/input/: __init__.py  controller_interface.py  input_manager.py  joystick_buttons.py  joystick_controller.py  joystick_manager.py  joystick_state.py  keyboard_controller.py  keyboard_manager.py  move.py
physics_platformer/src/physics_platformer/resource_management/: assets_common.py  character_loader.py  ff3.py  level_loader.py  sff.py
physics_platformer/test/: __init__.py  sff-test.py  test_air_loader.py  test_animatable_object.py  test_animation_actor.py  test_basic_game.py  test_character_loader.py  test_character_object.py  test_cns_loader.py  test_ffe_loader.py  test_hinge_constraint.py  test_joystick_manager.py  test_keyboard_manager.py  test_level_loader.py  test_load_egg.py  test_sff_loader.py  test_state_machine.py
platformer_core/: CMakeLists.txt  package.xml
platformer_core/character/: character_base.py  character_info.py  character_state_data.py  character_states.py  motion_commander.py
platformer_core/demos/: demo_basic_game.py  demo_simple_level.py
platformer_core/game_actions/: animation_actions.py  character_actions.py  general_actions.py
platformer_core/game_level/: __init__.py  ledge.py  level.py  level_collision_resolver.py  level_sector_resolver.py  platform.py  sector.py  simple_platform.py
platformer_core/game_object/: animatable_object.py  game_object.py
platformer_core/input/: controller_interface.py  joystick_controller.py  joystick_state.py  move.py
platformer_core/resource_management/: __init__.py  assets_common.py  level_loader.py
platformer_core/resource_management/ff3/: character_loader.py  ffe_loader.py
platformer_core/sprite/: sprite.py  sprite_loader.py
platformer_core/state_machine/: state.py  state_machine.py
platformer_core/test/: test_air_loader.py  test_application.py  test_character_loader.py  test_ffe_loader.py  test_game_base.py  test_keyboard_manager.py  test_level_loader.py
platformer_resources/: CMakeLists.txt  README.md  package.xml
platformer_resources/characters/Hiei/: player.air  player.cns  player.def  player.sff  portrait.act
platformer_resources/characters/Neji/: 2.act  3.act  6.act  Especiales.cns  Neji.air  Neji.cmd  Supers.cns  common1.cns
platformer_resources/worlds/: PlatformerSimpleLevel.blend  PlatformerSimpleLevel.egg
(+161 files in other folders)
