<?xml version="1.0"?>
<package>
  <name>panda3d_examples</name>
  <version>0.0.0</version>
  <description>The panda3d_examples package</description>

  <maintainer email="jrgnichodeve@gmail.com">Jorge Nicho</maintainer>
  <author email="jrgnichodeve@gmail.com">Jorge Nicho</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>panda3d</run_depend>
  <run_depend>python-pygame</run_depend>
  <run_depend>rospy</run_depend>
</package>
