<?xml version="1.0"?>
<package>
  <name>physics_platformer</name>
  <version>0.0.0</version>
  <description>The physics_platformer package</description>

  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>BSD</license>
  <author email="jrgnichodevel@gmail.com">Jorge Nicho</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python-bitarray</run_depend>
  <run_depend>panda3d</run_depend>
  <run_depend>python-pygame</run_depend>


  <export>
  </export>
</package>
