cmake_minimum_required(VERSION 2.8.3)
project(platformer_resources)

find_package(catkin REQUIRED COMPONENTS
  rospy
)

###################################
## catkin specific configuration ##
###################################
catkin_package(
)

###########
## Build ##
###########

#############
## Install ##
#############


