<?xml version="1.0"?>
<package>
  <name>simple_platformer</name>
  <version>0.0.0</version>
  <description>The simple_platformer package</description>

  <maintainer email="jrgnichodeve@gmail.com">Jorge Nicho</maintainer>
  <author email="jrgnichodeve@gmail.com">Jorge Nicho</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-bitarray</run_depend>
  <run_depend>python-pygame</run_depend>

</package>
